--- a/Informatica/index.html
+++ b/Informatica/index.html
@@ -8,8 +8,8 @@
     <p>Soy Zaira, voy al colegio Calasanz y vivo en Argentina</p>
     <ul>
 <li><a href="./enlace.html">Ejercicio 1</a></li>
-<li>Ejercicio 2</li>
-<li>Ejercicio 3</li>
+<li><a href="./tabla.html" target= "_blank"> Ejercicio 2</a></li>
+<li><a href="./tabla2.html"></a>Ejercicio 3</li>
     </ul>
     <img src="./imagen.jpg"
 </body>
