--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <ul>
 <li><a href="./enlace.html">Ejercicio 1</a></li>
 <li><a href="./tabla.html" target= "_blank"> Ejercicio 2</a></li>
-<li>Ejercicio 3</li>
+<li><a href="./tabla2.html">Ejercicio 3</a></li>
+<li><a href="./semántica.html">Ejercicio 4</a></li>
     </ul>
     <img src="./imagen.jpg"
 </body>
