--- a/semántica.html
+++ b/semántica.html
@@ -58,7 +58,7 @@
                 <td>Mafalda critica las injusticias sociales</td>
             </tr>
         </table>
-        <img src="images.jpg" width="30%">
+        <img src="./images.jpg" width="30%">
     </main>
     <footer>
         <p>© 2025 Mafalda y Quino. Todos los derechos reservados.</p>
