--- a/index (2).html
+++ b/index (2).html
@@ -11,6 +11,6 @@
 <li><a href="./tabla.html" target= "_blank"> Ejercicio 2</a></li>
 <li><a href="./tabla2.html"></a>Ejercicio 3</li>
     </ul>
-    <img src="./imagen.jpg"
+    <img src="./bizcochuelo.jpg"
 </body>
 </html>
