--- a/enlace.html
+++ b/enlace.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Receta</title>
 </head>
 <body>
-    <h2>Esto es otra pagina</h2>
+    <h2>Bizcochuelo</h2>
+    <h3>Ingredientes:</h3>
+    <ul></ul>
+    <li>Harina</li>
+    <li>Huevo</li>
+    <li>Azucar</li>
+</ul>
+    <h4>Preparación:</h4>
+    <ol>
+    <li>Mezclar una taza de huevos con una de azucar.</li>
+    <li>Agregar una taza de harina.</li>
+    <li>Precalentar el horno a 180º.</li>
+    <li>Cocinar durante media hora.</li>
+</ol>
+<img src="./bizcochuelo.jpg"
 </body>
 </html>
