--- a/tabla2.html
+++ b/tabla2.html
@@ -15,6 +15,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h2>Tablas en html 2</h2>
     <table border="1">
         <tr>
             <th>Curso</th>
