--- a/semántica.html
+++ b/semántica.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./semantica_estilos.css">
     <title>Mafalda</title>
 </head>
 <body>
@@ -19,10 +20,9 @@
     </nav>
     <main>
     <!--Contenido principal de la página-->
-        <p><strong>Mafalda</strong> es una niña argentina creada por el dibujante Quino en 1964. Con su mirada crítica y reflexiva sobre la sociedad, la política y la injusticia, se convirtió en una voz influyente no solo en Argentina, sino en todo el mundo de habla hispana. Mafalda representa la consciencia social, y a través de su humor nos invita a pensar en la paz, los derechos humanos y el futuro del planeta.</p>
-        <p>Mafalda representa la consciencia social, y a través de su humor nos invita a
-            pensar en la paz, los derechos humanos y el futuro del planeta.</p>
-            la paz, los derechos humanos y el futuro del planeta.</p>
+        <p><strong>Mafalda</strong> es una niña argentina creada por el dibujante Quino en 1964. Con su mirada crítica y reflexiva sobre la sociedad, la política y la injusticia, se convirtió en una voz influyente no solo en Argentina, sino en todo el mundo de habla hispana.</p>
+        <p>Mafalda representa la consciencia social, y a través de su humor nos invita a pensar en la paz, los derechos humanos y el futuro del planeta.</p>
+           
         </article>
         <article class="tarjeta"></article>
         <h2>Personajes Principales de la Tira</h2>
