--- a/index.html
+++ b/index.html
@@ -1,17 +1,62 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Mi pagina</title>  
-</head>
-<body>
-    <h1>Bienvenidos</h1>
-    <p>Soy Zaira, voy al colegio Calasanz y vivo en Argentina</p>
-    <ul>
-<li><a href="./enlace.html">Ejercicio 1</a></li>
-<li><a href="./tabla.html" target= "_blank"> Ejercicio 2</a></li>
-<li><a href="./tabla2.html">Ejercicio 3</a></li>
-<li><a href="./semántica.html">Ejercicio 4</a></li>
-    </ul>
-    <img src="./imagen.jpg"
-</body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="index_estilos.css">
+        <title>Portafolio de Informática</title>
+    </head>
+    <body>
+        <!-- Encabezado principal con título y subtítulo -->
+         <header>
+            <h1>Portafolio de Informática</h1>
+            <h3>Primeros Pasos en Diseño Web</h3>
+        </header>
+        <!-- Menú de navegación principal -->
+         <nav>
+            <a href="https://zairaaguirre.github.io/informatica/">Repositorio GitHub</a>
+            <a href="https://drive.google.com/drive/folders/1PPMJmYQ9GFcUzWHYvKQOf95f7Y49He39?usp=drive_link">Carpeta en Drive</a>
+        </nav>
+        <main>
+            <!-- Contenido principal de la página -->
+             <section>
+                <article class="tarjeta">
+                    <h2>Sobre Mi:</h2>
+                    <p>Me llamo <strong>Zaira Aguirre</strong> y voy a <strong>3°C</strong> en el <strong>Colegio Calasanz</strong> y esta es mi página. Me gusta escuchar música y pintar.</p>
+                </article>
+                <article class="tarjeta">
+                    <h2>Lo que Aprendi hasta Ahora:</h2>
+                    <ul>
+                        <li>Crear estructuras HTML básicas</li>
+                        <li>Insertar imágines, enlaces y tablas</li>
+                        <li>Usar etiquetas semánticas correctamente</li>
+                        <li>Aplicar estilos usando CSS externo</li>
+                    </ul>
+                </article>
+                <article class="tarjeta">
+                    <h2>Herramientas que estoy Usando:</h2>
+                    <img src="vsc.jpg" width="10%">
+                    <img src="html.png" width="12%">
+                    <img src="css.png" width="13%">
+                    <img src="chrome.png" width="18%">
+                </article>
+            </section>
+            <!-- Información complementaria (aside) --> 
+             <aside>
+                <h3>Ejercicios Realizados:</h3>
+                <ul>
+                    <li><a href="enlace.html">Receta</a></li>
+                    <li><a href="tabla.html">Tabla 1</li>
+                    <li><a href="tabla2.html">Tabla 2</a></li>
+                    <li><a href="semántica.html">Mafalda</li>
+                </ul>
+            </aside> 
+        </main>
+        <!-- Pie de página con derechos y enlaces legales --> 
+         <footer>
+            <p>&copy; 2025 Zaira Aguirre Sanz - Informática</p> 
+            <p><a href="contacto.html"><strong>Contacto</strong></a></p> 
+        </footer>
+    </body>
 </html>
