--- a/semántica.html
+++ b/semántica.html
@@ -13,18 +13,20 @@
         <h3>La Niña que Quiere Cambiar el Mundo</h3>
     </header>
 <!--Menú de navegación principal-->
-    <nav>
-            <a href="">Tiras Clásicas</a>
-            <a href="">Personajes</a>
-            <a href="">Galería</a>
+ <nav>
+        <a href="">Tiras clásicas</a>
+        <a href="">Personajes</a>
+        <a href="">Galería</a>
     </nav>
     <main>
     <!--Contenido principal de la página-->
+     <section>
+         <article class="tarjeta">
         <p><strong>Mafalda</strong> es una niña argentina creada por el dibujante Quino en 1964. Con su mirada crítica y reflexiva sobre la sociedad, la política y la injusticia, se convirtió en una voz influyente no solo en Argentina, sino en todo el mundo de habla hispana.</p>
         <p>Mafalda representa la consciencia social, y a través de su humor nos invita a pensar en la paz, los derechos humanos y el futuro del planeta.</p>
            
         </article>
-        <article class="tarjeta"></article>
+        <article class="tarjeta">
         <h2>Personajes Principales de la Tira</h2>
         <ul>
             <li><strong>Mafalda</strong>: La protagonista, una niña preocupada por la humanidad y la paz mundial.</li>
@@ -36,7 +38,7 @@
     </article>
     <article class="tarjeta">
         <h2>Viñetas Clásicas</h2>
-        <table>
+       <table border="1">
             <tr>
                 <th>Fecha de Publicación</th>
                 <th>Viñeta</th>
