--- a/enlace.html
+++ b/enlace.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index_estilos.css">
     <title>Receta</title>
 </head>
 <body>
-    <h2>Bizcochuelo</h2>
-    <h3>Ingredientes:</h3>
+    <header>
+    <h2 class="titulo">Bizcochuelo</h2>
+</header>
+    <h3 class="subrayado">Ingredientes:</h3>
     <ul></ul>
     <li>Harina</li>
     <li>Huevo</li>
     <li>Azucar</li>
 </ul>
-    <h4>Preparación:</h4>
+    <h4 class="subrayado">Preparación:</h4>
     <ol>
     <li>Mezclar una taza de huevos con una de azucar.</li>
     <li>Agregar una taza de harina.</li>
