--- a/enlace.html
+++ b/enlace.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <h2 class="titulo">Bizcochuelo</h2>
+    <h2 class="titulo">BIZCOCHUELO</h2>
 </header>
     <h3 class="subrayado">Ingredientes:</h3>
     <ul></ul>
