--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                     <li><a href="tabla.html">Tabla 1</li>
                     <li><a href="tabla2.html">Tabla 2</a></li>
                     <li><a href="semántica.html">Mafalda</li>
+                    <li><a href="edad.html">edad</li>
+                    <li><a href="Calculadora.html">calculadora</li>
+                    <li><a href="juego.html">juego</li>ç
+                    <li><a href="contador.html">contador</li>
+                    <li><a href="boton.html">boton</li>
                 </ul>
             </aside> 
         </main>
