--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li><a href="semántica.html">Mafalda</li>
                     <li><a href="edad.html">edad</li>
                     <li><a href="Calculadora.html">calculadora</li>
-                    <li><a href="juego.html">juego</li>ç
+                    <li><a href="juego.html">juego</li>
                     <li><a href="contador.html">contador</li>
                     <li><a href="boton.html">boton</li>
                 </ul>
@@ -64,4 +64,5 @@
             <p><a href="contacto.html"><strong>Contacto</strong></a></p> 
         </footer>
     </body>
+
 </html>
