--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                     <li><a href="juego.html">juego</li>
                     <li><a href="contador.html">contador</li>
                     <li><a href="boton.html">boton</li>
+                    <li><a href="formulario1.html">formulario</li>
+                    <li><a href="fiesta.html">fiesta fin de año</li>
+                    <li><a href="contador.html">contador promedio</li>
+                    <li><a href="registro.html">registro estudiantes</li>
                 </ul>
             </aside> 
         </main>
