--- a/juego.html
+++ b/juego.html
@@ -10,7 +10,8 @@
     <button onclick="jugar()">Jugar</button>
     <p id="resultado"></p>
 
-    <script src="./Juego.js"></script>
+    <script src="./juego.js"></script>
 
 </body>
 </html>
+
