--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                     <li><a href="fiesta.html">fiesta fin de año</li>
                     <li><a href="contador.html">contador promedio</li>
                     <li><a href="registro.html">registro estudiantes</li>
+                    <li><a href="registro.html">registro estudiantes</li>
+                    <li><a href="calculadoraimc.html">calculadora IMC</li>
                 </ul>
             </aside> 
         </main>
