--- a/Calculadora.html
+++ b/Calculadora.html
@@ -10,7 +10,7 @@
     <button onclick="calcularPromedio()">Calcular promedio</button>
     <p id="resultado"></p>
 
-    <script src="./Calculadora.js"></script>
+    <script src="./calculadora.js"></script>
 
 </body>
 </html>
