--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
              <aside>
                 <h3>Ejercicios Realizados:</h3>
                 <ul>
-                    <li><a href="enlace.html">Receta</a></li>
-                    <li><a href="tabla.html">Tabla 1</li>
-                    <li><a href="tabla2.html">Tabla 2</a></li>
-                    <li><a href="semántica.html">Mafalda</li>
-                    <li><a href="edad.html">edad</li>
-                    <li><a href="Calculadora.html">calculadora</li>
-                    <li><a href="juego.html">juego</li>
-                    <li><a href="contador.html">contador</li>
-                    <li><a href="boton.html">boton</li>
-                    <li><a href="formulario1.html">formulario</li>
-                    <li><a href="fiesta.html">fiesta fin de año</li>
-                    <li><a href="contador.html">contador promedio</li>
-                    <li><a href="registro.html">registro estudiantes</li>
-                    <li><a href="registro.html">registro estudiantes</li>
-                    <li><a href="calculadoraimc.html">calculadora IMC</li>
+                    <li><a href="./enlace.html">Receta</a></li>
+                    <li><a href="./tabla.html">Tabla 1</li>
+                    <li><a href="./tabla2.html">Tabla 2</a></li>
+                    <li><a href="./semántica.html">Mafalda</li>
+                    <li><a href="./edad.html">edad</li>
+                    <li><a href="./Calculadora.html">calculadora</li>
+                    <li><a href="./juego.html">juego</li>
+                    <li><a href="./contador.html">contador</li>
+                    <li><a href="./boton.html">boton</li>
+                    <li><a href="./formulario1.html">formulario</li>
+                    <li><a href="./fiesta.html">fiesta fin de año</li>
+                    <li><a href="./contadorprom.html">contador promedio</li>
+                    <li><a href="./registro.html">registro estudiantes</li>
+                    <li><a href="./form.eventos.html">formulario eventos</li>
+                    <li><a href="./calculadoraimc.html">calculadora IMC</li>
                 </ul>
             </aside> 
         </main>
